[package]
name = "daddle"
version = "0.0.1"
edition = "2021"
license = "MPL-2.0"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
rayon = "1.8"
async-stream = "0.3"
futures = "0.3"
sysinfo = "0.30"
once_cell = "1.19"
tokio-stream = "0.1"
